# PALM-9000

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
notebooks/: 20250701_audio_input.ipynb  20250701_langchain_tutorial.ipynb  20250701_llm_sandbox.ipynb  20250701_palm_9000.ipynb  20250702_full_pipeline.ipynb  20250706_gemini_tts.ipynb  20250706_picovoice_cheetah_demo.ipynb  20250706_pvleopard_demo.ipynb  20250706_vosk_demo.ipynb  20250712_enhanced_vad.ipynb  20250713_text_to_speech_enhancement.ipynb  20250713_wake_word_accuracy.ipynb  20250714_gemini_live_api.ipynb  20250721_pipecat.ipynb  20250803_dot_matrix.ipynb  20250816_llama_index_learning.ipynb  20250824_soil_moisture_sensor.ipynb
palm_9000/: gpio.py  llm.py  pipecat.py  processors.py  settings.py  speech_to_text.py  text_to_speech.py  utils.py  vad.py  wake_word.py
palm_9000/legacy/: text_to_speech.py  vad.py  wake_word.py
