[project]
name = "palm-9000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "langchain[google-genai]>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.5.0",
    "openai-whisper>=20250625",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pydantic>=2.11.7",
    "pyttsx3>=2.98",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "webrtcvad>=2.0.10",
    "pydantic-settings>=2.10.1",
    "google-genai>=1.24.0",
    "pyaudio>=0.2.14",
    "pvleopard>=2.0.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
]
